# RealSense-Basic-Code

./: README.md
devel/: .catkin  setup.sh
devel/lib/pkgconfig/: ros_opencv.pc
devel/lib/ros_opencv/: sub_pub_image
devel/share/ros_opencv/cmake/: ros_opencvConfig.cmake
src/ros_opencv/: CMakeLists.txt  package.xml
src/ros_opencv/launch/: integration.launch
src/ros_opencv/src/: image_class.cpp  sub_pub_image.cpp
